--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,7 +4,7 @@
   margin: 0;
   padding: 0;
   border: 0;
-  font-family: 'LeHigh Regular', serif;
+  font-family: $serif;
   letter-spacing: .05rem;
 }
 
@@ -43,7 +43,7 @@ nav {
         text-decoration: none;
         text-transform: uppercase;
         color: $olive;
-        font-family: 'LeHigh Bold';
+        font-family: $serif-bold;
         letter-spacing: .05rem;
 
         &:hover {
@@ -56,7 +56,7 @@ nav {
 }
 
 h1, h2 {
-  font-family: 'LeHigh Regular';
+  font-family: $serif;
   letter-spacing: .1rem;
   color: $white;
 }
@@ -119,7 +119,7 @@ p {
 
 .green-btn {
   background-color: $olive;
-  font-family: 'Barlow Condensed', sans-serif;
+  font-family: $sans-serif;
   color: $white;
   text-transform: uppercase;
   padding: 10px;
@@ -241,7 +241,7 @@ h3 {
 }
 
 .wht-btn {
-  font-family: 'Barlow Condensed', sans-serif;
+  font-family: $sans-serif;
   color: $white;
   text-transform: uppercase;
   padding: 10px;
@@ -286,7 +286,7 @@ section, footer {
   right: 0;
   line-height: 45px;
   padding: 5px 15px 0px 15px;
-  color: #999;
+  color: $olive;
   border: 0;
   font-size: 1.4em;
   font-weight: bold;
@@ -301,7 +301,7 @@ section, footer {
   top: 0px;
   right: 0;
   padding: 7px 15px 0px 15px;
-  color: #999;
+  color: $olive;
   border: 0;
   font-size: 3em;
   line-height: 65px;
@@ -316,7 +316,7 @@ section, footer {
   font-weight: bold;
   font-size: 0.8em;
   width: 100%;
-  background: #f1f1f1;
+  background: $tan;
   position: relative;
   text-align: center;
   font-size: 12px;
@@ -329,29 +329,24 @@ section, footer {
   li {
     display: block;
     padding: 15px 0 15px 0;
-    border-bottom: #dddddd 1px solid;
+    border-bottom: $white 1px solid;
     &:hover {
-      display: block;
-      background: #ffffff;
-      padding: 15px 0 15px 0;
-      border-bottom: #dddddd 1px solid;
+      background: $white;
     }
   }
   ul li a {
     text-decoration: none;
     margin: 0px;
-    color: #666;
+    color: $orange;
     &:hover {
-      color: #666;
+      color: $orange;
       text-decoration: none;
     }
   }
   a {
-    text-decoration: none;
-    color: #666;
+    color: $orange;
     &:hover {
-      text-decoration: none;
-      color: #666;
+      color: $olive;
     }
   }
 }
