--- a/css/main.css
+++ b/css/main.css
@@ -243,10 +243,12 @@ h3 {
   /* line 170, /Users/kristenharlin/Documents/_GatorFiles/_2018-fall-web2/_project1/project1-adv-web1/sass/main.scss */
   .about #hours p {
     width: 100%;
+    font-size: .95rem;
+    line-height: 1.3rem;
   }
 }
 
-/* line 180, /Users/kristenharlin/Documents/_GatorFiles/_2018-fall-web2/_project1/project1-adv-web1/sass/main.scss */
+/* line 182, /Users/kristenharlin/Documents/_GatorFiles/_2018-fall-web2/_project1/project1-adv-web1/sass/main.scss */
 .callOutBlock {
   width: 100%;
   max-width: 350px;
@@ -257,14 +259,14 @@ h3 {
 }
 
 @media (min-width: 750px) {
-  /* line 180, /Users/kristenharlin/Documents/_GatorFiles/_2018-fall-web2/_project1/project1-adv-web1/sass/main.scss */
+  /* line 182, /Users/kristenharlin/Documents/_GatorFiles/_2018-fall-web2/_project1/project1-adv-web1/sass/main.scss */
   .callOutBlock {
-    width: 33%;
+    width: 30%;
     flex-wrap: nowrap;
   }
 }
 
-/* line 194, /Users/kristenharlin/Documents/_GatorFiles/_2018-fall-web2/_project1/project1-adv-web1/sass/main.scss */
+/* line 196, /Users/kristenharlin/Documents/_GatorFiles/_2018-fall-web2/_project1/project1-adv-web1/sass/main.scss */
 .decisions {
   display: flex;
   justify-content: center;
@@ -273,32 +275,32 @@ h3 {
 }
 
 @media (min-width: 770px) {
-  /* line 194, /Users/kristenharlin/Documents/_GatorFiles/_2018-fall-web2/_project1/project1-adv-web1/sass/main.scss */
+  /* line 196, /Users/kristenharlin/Documents/_GatorFiles/_2018-fall-web2/_project1/project1-adv-web1/sass/main.scss */
   .decisions {
     padding-top: 60px;
     padding-bottom: 60px;
   }
 }
 
-/* line 206, /Users/kristenharlin/Documents/_GatorFiles/_2018-fall-web2/_project1/project1-adv-web1/sass/main.scss */
+/* line 208, /Users/kristenharlin/Documents/_GatorFiles/_2018-fall-web2/_project1/project1-adv-web1/sass/main.scss */
 .decisions .food {
   background-image: url(../img/food-bg.jpg);
   background-repeat: no-repeat;
 }
 
-/* line 211, /Users/kristenharlin/Documents/_GatorFiles/_2018-fall-web2/_project1/project1-adv-web1/sass/main.scss */
+/* line 213, /Users/kristenharlin/Documents/_GatorFiles/_2018-fall-web2/_project1/project1-adv-web1/sass/main.scss */
 .decisions .dessert {
   background-image: url(../img/flan-bg.jpg);
   background-repeat: no-repeat;
 }
 
-/* line 216, /Users/kristenharlin/Documents/_GatorFiles/_2018-fall-web2/_project1/project1-adv-web1/sass/main.scss */
+/* line 218, /Users/kristenharlin/Documents/_GatorFiles/_2018-fall-web2/_project1/project1-adv-web1/sass/main.scss */
 .decisions .drink {
   background-image: url(../img/beer-bg.jpg);
   background-repeat: no-repeat;
 }
 
-/* line 222, /Users/kristenharlin/Documents/_GatorFiles/_2018-fall-web2/_project1/project1-adv-web1/sass/main.scss */
+/* line 224, /Users/kristenharlin/Documents/_GatorFiles/_2018-fall-web2/_project1/project1-adv-web1/sass/main.scss */
 .pull-quote {
   background-color: #aa4f30;
   padding-top: 25px;
@@ -310,7 +312,7 @@ h3 {
 }
 
 @media (min-width: 770px) {
-  /* line 222, /Users/kristenharlin/Documents/_GatorFiles/_2018-fall-web2/_project1/project1-adv-web1/sass/main.scss */
+  /* line 224, /Users/kristenharlin/Documents/_GatorFiles/_2018-fall-web2/_project1/project1-adv-web1/sass/main.scss */
   .pull-quote {
     padding-top: 80px;
     padding-bottom: 90px;
@@ -318,7 +320,7 @@ h3 {
   }
 }
 
-/* line 234, /Users/kristenharlin/Documents/_GatorFiles/_2018-fall-web2/_project1/project1-adv-web1/sass/main.scss */
+/* line 236, /Users/kristenharlin/Documents/_GatorFiles/_2018-fall-web2/_project1/project1-adv-web1/sass/main.scss */
 .pull-quote p {
   color: #ffffff;
   font-size: 1.8rem;
@@ -327,7 +329,7 @@ h3 {
   max-width: 500px;
 }
 
-/* line 243, /Users/kristenharlin/Documents/_GatorFiles/_2018-fall-web2/_project1/project1-adv-web1/sass/main.scss */
+/* line 245, /Users/kristenharlin/Documents/_GatorFiles/_2018-fall-web2/_project1/project1-adv-web1/sass/main.scss */
 .wht-btn {
   font-family: "Barlow Condensed", sans-serif;
   color: #ffffff;
@@ -340,43 +342,43 @@ h3 {
   -o-transition: 1s;
 }
 
-/* line 251, /Users/kristenharlin/Documents/_GatorFiles/_2018-fall-web2/_project1/project1-adv-web1/sass/main.scss */
+/* line 253, /Users/kristenharlin/Documents/_GatorFiles/_2018-fall-web2/_project1/project1-adv-web1/sass/main.scss */
 .wht-btn:hover {
   background-color: #ffffff;
   color: #aa4f30;
 }
 
-/* line 257, /Users/kristenharlin/Documents/_GatorFiles/_2018-fall-web2/_project1/project1-adv-web1/sass/main.scss */
+/* line 259, /Users/kristenharlin/Documents/_GatorFiles/_2018-fall-web2/_project1/project1-adv-web1/sass/main.scss */
 footer {
   background-color: #eae8d3;
 }
 
 @media (min-width: 390px) {
-  /* line 257, /Users/kristenharlin/Documents/_GatorFiles/_2018-fall-web2/_project1/project1-adv-web1/sass/main.scss */
+  /* line 259, /Users/kristenharlin/Documents/_GatorFiles/_2018-fall-web2/_project1/project1-adv-web1/sass/main.scss */
   footer {
     display: flex;
     justify-content: space-between;
   }
 }
 
-/* line 265, /Users/kristenharlin/Documents/_GatorFiles/_2018-fall-web2/_project1/project1-adv-web1/sass/main.scss */
+/* line 267, /Users/kristenharlin/Documents/_GatorFiles/_2018-fall-web2/_project1/project1-adv-web1/sass/main.scss */
 footer p {
   margin-bottom: 5px;
 }
 
-/* line 269, /Users/kristenharlin/Documents/_GatorFiles/_2018-fall-web2/_project1/project1-adv-web1/sass/main.scss */
+/* line 271, /Users/kristenharlin/Documents/_GatorFiles/_2018-fall-web2/_project1/project1-adv-web1/sass/main.scss */
 footer .social img {
   max-width: 40px;
   padding: 5px;
 }
 
-/* line 276, /Users/kristenharlin/Documents/_GatorFiles/_2018-fall-web2/_project1/project1-adv-web1/sass/main.scss */
+/* line 278, /Users/kristenharlin/Documents/_GatorFiles/_2018-fall-web2/_project1/project1-adv-web1/sass/main.scss */
 section, footer {
   padding: 15px 5% 15px 5%;
 }
 
 @media (min-width: 750px) {
-  /* line 280, /Users/kristenharlin/Documents/_GatorFiles/_2018-fall-web2/_project1/project1-adv-web1/sass/main.scss */
+  /* line 282, /Users/kristenharlin/Documents/_GatorFiles/_2018-fall-web2/_project1/project1-adv-web1/sass/main.scss */
   .footer-contact {
     display: flex;
     justify-content: space-between;
@@ -384,7 +386,7 @@ section, footer {
   }
 }
 
-/* line 290, /Users/kristenharlin/Documents/_GatorFiles/_2018-fall-web2/_project1/project1-adv-web1/sass/main.scss */
+/* line 292, /Users/kristenharlin/Documents/_GatorFiles/_2018-fall-web2/_project1/project1-adv-web1/sass/main.scss */
 .hamburger {
   background: none;
   position: absolute;
@@ -401,7 +403,7 @@ section, footer {
   z-index: 10000000000000;
 }
 
-/* line 306, /Users/kristenharlin/Documents/_GatorFiles/_2018-fall-web2/_project1/project1-adv-web1/sass/main.scss */
+/* line 308, /Users/kristenharlin/Documents/_GatorFiles/_2018-fall-web2/_project1/project1-adv-web1/sass/main.scss */
 .cross {
   background: none;
   position: absolute;
@@ -418,7 +420,7 @@ section, footer {
   z-index: 10000000000000;
 }
 
-/* line 322, /Users/kristenharlin/Documents/_GatorFiles/_2018-fall-web2/_project1/project1-adv-web1/sass/main.scss */
+/* line 324, /Users/kristenharlin/Documents/_GatorFiles/_2018-fall-web2/_project1/project1-adv-web1/sass/main.scss */
 .menu {
   z-index: 1000000;
   font-weight: bold;
@@ -430,7 +432,7 @@ section, footer {
   font-size: 12px;
 }
 
-/* line 331, /Users/kristenharlin/Documents/_GatorFiles/_2018-fall-web2/_project1/project1-adv-web1/sass/main.scss */
+/* line 333, /Users/kristenharlin/Documents/_GatorFiles/_2018-fall-web2/_project1/project1-adv-web1/sass/main.scss */
 .menu ul {
   margin: 0;
   padding: 0;
@@ -438,43 +440,43 @@ section, footer {
   list-style-image: none;
 }
 
-/* line 337, /Users/kristenharlin/Documents/_GatorFiles/_2018-fall-web2/_project1/project1-adv-web1/sass/main.scss */
+/* line 339, /Users/kristenharlin/Documents/_GatorFiles/_2018-fall-web2/_project1/project1-adv-web1/sass/main.scss */
 .menu li {
   display: block;
   padding: 15px 0 15px 0;
   border-bottom: #ffffff 1px solid;
 }
 
-/* line 341, /Users/kristenharlin/Documents/_GatorFiles/_2018-fall-web2/_project1/project1-adv-web1/sass/main.scss */
+/* line 343, /Users/kristenharlin/Documents/_GatorFiles/_2018-fall-web2/_project1/project1-adv-web1/sass/main.scss */
 .menu li:hover {
   background: #ffffff;
 }
 
-/* line 345, /Users/kristenharlin/Documents/_GatorFiles/_2018-fall-web2/_project1/project1-adv-web1/sass/main.scss */
+/* line 347, /Users/kristenharlin/Documents/_GatorFiles/_2018-fall-web2/_project1/project1-adv-web1/sass/main.scss */
 .menu ul li a {
   text-decoration: none;
   margin: 0px;
   color: #aa4f30;
 }
 
-/* line 349, /Users/kristenharlin/Documents/_GatorFiles/_2018-fall-web2/_project1/project1-adv-web1/sass/main.scss */
+/* line 351, /Users/kristenharlin/Documents/_GatorFiles/_2018-fall-web2/_project1/project1-adv-web1/sass/main.scss */
 .menu ul li a:hover {
   color: #aa4f30;
   text-decoration: none;
 }
 
-/* line 354, /Users/kristenharlin/Documents/_GatorFiles/_2018-fall-web2/_project1/project1-adv-web1/sass/main.scss */
+/* line 356, /Users/kristenharlin/Documents/_GatorFiles/_2018-fall-web2/_project1/project1-adv-web1/sass/main.scss */
 .menu a {
   color: #aa4f30;
 }
 
-/* line 356, /Users/kristenharlin/Documents/_GatorFiles/_2018-fall-web2/_project1/project1-adv-web1/sass/main.scss */
+/* line 358, /Users/kristenharlin/Documents/_GatorFiles/_2018-fall-web2/_project1/project1-adv-web1/sass/main.scss */
 .menu a:hover {
   color: #516a4a;
 }
 
 @media (min-width: 550px) {
-  /* line 362, /Users/kristenharlin/Documents/_GatorFiles/_2018-fall-web2/_project1/project1-adv-web1/sass/main.scss */
+  /* line 364, /Users/kristenharlin/Documents/_GatorFiles/_2018-fall-web2/_project1/project1-adv-web1/sass/main.scss */
   .hamburger, .cross, .menu {
     display: none;
   }
